@@ -1,3 +1,12 @@
+2010-01-06  Neal Walfield  <neal@gnu.org>
+
+	* src/starling.c [HAVE_HILDON && HAVE_HILDON_VERSION > 0]: Include
+	<hildon/hildon-button.h> and <hildon/hildon-check-button.h>.
+	(menu_item_add) [HAVE_HILDON_APP_MENU]: If CHECK_MENU_ITEM is
+	true, create a HildonCheckButton, not a GtkToggleButton.  If this
+	is not the case, create a HildonButton, not a GtkButton.  Update
+	users.  Filter TEXT to exclude any mnemonic.
+
 2010-01-05  Neal Walfield  <neal@gnu.org>
 
 	House cleaning.
